fixed logo styling so icon aligned properly

--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -106,8 +106,9 @@ header a {
 .icon-onpoint{
     color: #12CA9A;
     margin-left: 18px;
-    font-size: 80px;
+    font-size: 86px;
     -webkit-text-stroke: 0px;
+    display: inline-block;
 }
 
 header h1#onpoint_title {
@@ -399,6 +400,14 @@ div.featured_region.curr_region {
   }
   header h1#onpoint_title {
     display: block;
+  }
+  header h1#onpoint_title span {
+    vertical-align: middle;
+  }
+  header h1#onpoint_title span#onpoint_title_text {
+    display: inline-block;
+    line-height: 1.4;
+    padding-top: 10px;
   }
 
   input#search {
